...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="YP White"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yjx-iX-1F0" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButtonToTap"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="Alb-Gi-Jzy"/>
                                                        <constraint firstAttribute="width" constant="44" id="zS3-mW-OQ2"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
...
                                <connections>
                                    <outlet property="delegate" destination="NPi-bn-mYf" id="Nt4-42-WKr"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B0V-f4-4Yb" userLabel="Backward Button">
                                <rect key="frame" x="9" y="56" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="iMy-Pe-cLb"/>
                                    <constraint firstAttribute="width" constant="48" id="m9u-Jk-j5N"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="backward_button"/>
...
                                    <constraint firstAttribute="height" constant="60" id="tb3-oL-P9v"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bjt-br-p6G" userLabel="Sign In Button">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="yp3-Og-Ifu"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Button"/>
...
