...
            "value" : "Êtes-vous sûr de vouloir vous déconnecter ?"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Вы уверены, что хотите выйти?"
          }
        }
      }
    },
    "Could not get authorization token" : {
      "comment" : "Alert message on the Splash screen.",
...
            "value" : "Oui"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Да"
          }
        }
      }
    }
  },
  "version" : "1.0"
...
