...
    private var estimatedProgressObservation: NSKeyValueObservation?

    // MARK: - UIViewController
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()

        estimatedProgressObservation = webView.observe(\.estimatedProgress) { [weak self] _, _ in
            self?.presenter?.didUpdateProgressValue(self?.webView.estimatedProgress ?? 0)
        }
    }
...
