...
            target: self,
            action: #selector(didTapLogoutButton)
        )

        logoutButton.translatesAutoresizingMaskIntoConstraints = false
        logoutButton.tintColor = UIColor(resource: .ypRed)
        logoutButton.accessibilityIdentifier = "logout"
        return logoutButton
    }()

    // MARK: - Private Properties
    private var profileImageServiceObserver: NSObjectProtocol?
    
...
